# opencv_test_repo

./: CMakeLists.txt  README.md  leastsquares.cpp  leastsquares.h  main.cpp  matrix_operations.cpp  matrix_operations.h
src/: noise_filter.cpp  noise_filter.h  pixattr.cpp  pixattr.h  segmentation.cpp  segmentation.h
